[metadata]
name = NDBC
version = 1.1.1
description = A package to automate the loading of NDBC data to a custom object
long_description = file: README.md
long_description_content_type = text/markdown,
url = https://github.com/GenSci/NDBC
author = C. Ryan Manzer
author_email = ryan@gensci.org
project_urls =
    Bug Tracker/Enhancements = https://github.com/GenSci/NDBC/issues

classifiers=[
        "Programming Language :: Python :: 3.7",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
    ],

[options]
package_dir =
    = NDBC
packages = find:
python_requires= >=3.7

[options.packages.find]
where = NDBC